crates/ty_python_semantic/resources/mdtest/snapshots/async.md_-_Async_with_statement…_-_Context_expression_w…_(28ef812089a32e6a).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: async.md - Async with statements - Context expression with possibly-unbound union variants
mdtest path: crates/ty_python_semantic/resources/mdtest/with/async.md
---

# Python source files

## mdtest_snippet.py

```
 1 | async def _(flag: bool):
 2 |     class Manager1:
 3 |         def __aenter__(self) -> str:
 4 |             return "foo"
 5 | 
 6 |         def __aexit__(self, exc_type, exc_value, traceback): ...
 7 | 
 8 |     class NotAContextManager: ...
 9 |     context_expr = Manager1() if flag else NotAContextManager()
10 | 
11 |     # error: [invalid-context-manager] "Object of type `Manager1 | NotAContextManager` cannot be used with `async with` because the methods `__aenter__` and `__aexit__` are possibly missing"
12 |     async with context_expr as f:
13 |         reveal_type(f)  # revealed: str
```

# Diagnostics

```
error[invalid-context-manager]: Object of type `Manager1 | NotAContextManager` cannot be used with `async with` because the methods `__aenter__` and `__aexit__` are possibly missing
  --> src/mdtest_snippet.py:12:16
   |
11 |     # error: [invalid-context-manager] "Object of type `Manager1 | NotAContextManager` cannot be used with `async with` because the me…
12 |     async with context_expr as f:
   |                ^^^^^^^^^^^^
13 |         reveal_type(f)  # revealed: str
   |
info: `NotAContextManager` does not implement `__aenter__`
info: `NotAContextManager` does not implement `__aexit__`

```
